--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <section>
         <h1>
-            <a href="#" onclick="location.href='rustdesk://config/==Qfi0zdj90UycTcyITOBZnZERGNaRDTXR0Tu9kNTlTRRFjbOVVdVZHcpN0dKlmRiojI5V2aiwiIiojIpBXYiwiIzVnLzBHcq5SZ09WblJnI6ISehxWZyJCLiMXduMHcwpmLlR3btVmciojI0N3boJye'">Rustmark</a> <a href="#">Support Links</a>
+            Rustmark Support Links<br>ARCHIVE
         </h1>
 
         <div class="search-container">
